ansible/roles/manage-k3s-homelab-cluster/files/hubble/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: hubble-ui
  ports:
    - name: http
      port: 80
      targetPort: 8081
  type: ClusterIP
