ansible/roles/manage-k3s-homelab-cluster/files/hubble/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-http-redirect
  namespace: kube-system
spec:
  parentRefs:
  - name: virtual-management-gateway
    namespace: virtual-management
    sectionName: hubble-http
  hostnames:
  - hubble.hoareau-marion.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        hostname: hubble.hoareau-marion.eu
        statusCode: 301
