ansible/roles/manage-k3s-homelab-cluster/files/hubble/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
  - name: virtual-management-gateway
    namespace: virtual-management
    sectionName: hubble-https
  hostnames:
  - hubble.hoareau-marion.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
